2009-07-14  Loic Dachary <loic@dachary.org>

 	* Release 1.7.5

	* pokernetwork/pokertable.py: https://gna.org/bugs/index.php?13950
	  The max_missed_round variable always ends up being a string if
	  it's specified in XML config because it's not typecast to INT.

2009-07-13  Loic Dachary <loic@dachary.org>

	* database/1.7.4-1.7.5.sql, database/schema.sql.in,
	  pokernetwork/pokerservice.py, tests/test-pokerservice.py.in: The
	  prize currency for a tournament can be different from the buy in
	  currency. The prize_currency field is added to tourneys_schedule
	  and will be used instead of the currency_serial if it is greater
	  than zero. The prize_currency_from_date_format field has been
	  added with the same semantic as currency_serial_from_date_format
	  (i.e. a template for strftime that is used to compute the
	  currency). Instead of restricting the template to a subset of
	  the placehodlers (Ymd), all numerical placeholders implemented by
	  strftime are now allowed.
	* pokernetwork/pokersite.py, tests/test-pokersite.py.in: packet=
	  argument, in the absence of jsonp argument is interpreted as the
	  packet as if it was the raw content of the post. It may be useful
	  for libraries such as opensocial that don't know how to send raw
	  data.
	  https://gna.org/task/?6656

2009-07-11  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test42_0_handSelectAll_MissingPrivsCauseFail):
	Wrote test.
	(PokerAvatarTestCase.handSelectAllMissingPrivsMakesItFail): Wrote
	method.
	(PokerAvatarTestCase.pingThenUnprivRegisterTourney): Renamed
	method to pingThenExpectPrivilegeFailure.
	(PokerAvatarTestCase.tourneyRegisterUnpriv)
	(PokerAvatarTestCase.seatUnpriv)
	(PokerAvatarTestCase.userInfoUnpriv)
	(PokerAvatarTestCase.personalInfoUnpriv)
	(PokerAvatarTestCase.playerInfoUnpriv)
	(PokerAvatarTestCase.test17_0_tourneyRegisterUnpriv): Rewrote test.
	(PokerAvatarTestCase.test17_1_seatUnpriv)